--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "^5.3.1",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
@@ -27,6 +28,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "daisyui": "^3.7.4"
+    "daisyui": "^3.7.4",
+    "prisma": "^5.3.1"
   }
 }
