--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.19",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "micro": "^10.0.1",
     "next": "^13.5.3",
     "postcss": "8.4.29",
     "react": "^18.2.0",
