--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flowbite-react": "^0.6.0",
     "micro": "^10.0.1",
     "next": "^13.5.3",
+    "next-auth": "^4.23.2",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
