--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
