--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
-    "xendit-node": "^3.3.0"
+    "xendit-node": "^3.3.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "daisyui": "^3.7.4",
