--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@supabase/supabase-js": "^2.38.3",
+    "@tanstack/react-table": "^8.10.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
