--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alharomapp",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@lordicon/react": "^1.4.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@supabase/supabase-js": "^2.38.3",
@@ -28,6 +29,7 @@
     "eslint-config-next": "13.4.19",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "lottie-web": "^5.12.2",
     "micro": "^10.0.1",
     "next": "^13.5.3",
     "next-auth": "^4.23.2",
