--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.1.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
     "lottie-web": "^5.12.2",
     "micro": "^10.0.1",
-    "next": "^13.5.3",
+    "next": "^14.1.0",
     "next-auth": "^4.23.2",
+    "nextjs": "^0.0.3",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.3",
     "xendit-node": "^3.3.0",
