--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@prisma/client": "^5.3.1",
     "@supabase/supabase-js": "^2.38.3",
     "@tanstack/react-table": "^8.10.7",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "^10.4.17",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
@@ -34,12 +34,12 @@
     "next": "^14.1.0",
     "next-auth": "^4.23.2",
     "nextjs": "^0.0.3",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.4",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.4.1",
     "xendit-node": "^3.3.0",
     "zod": "^3.22.4"
   },
